[tool.poetry]
name = "rulebricks"
version = "0.4.4"
description = "Python SDK for the Rulebricks API"
readme = "README.md"
authors = ["Sid Garimella <sid@rulebricks.com>"]
packages = [{ include = "rulebricks", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"
typing_extensions = ">= 4.0.0"
tabulate = "^0.8.9"            # Replace with the version you're using
types-tabulate = "^0.8.9"      # Match this version with your tabulate version

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
